--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "antd": "^5.22.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.3.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.2"
   },
